Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -12,12 +12,23 @@
   </head>
   <body>
     <div class="container">
-      <div class="To-do-App">
+      <div class="Todo-App">
         <h1>To-Do App</h1>
         <form action="" class="input-area">
           <input type="text" id="input-task" placeholder="Add a new task..." />
-          <button type="submit" id="add-task-btn">Add Task</button>
+          <button type="submit" id="add-task-btn">
+            <i class="fa fa-plus" aria-hidden="true"></i>
+          </button>
         </form>
+        <div class="todos-container">
+          <ul id="task-list"></ul>
+          <img
+            src="/img/kelly-sikkema--q69Jfp6MtM-unsplash.jpg"
+            alt="empty"
+            height="50px"
+            width="50px"
+          />
+        </div>
       </div>
     </div>
   </body>
