update my CSS added javascript

--- a/index.html
+++ b/index.html
@@ -22,14 +22,9 @@
         </form>
         <div class="todos-container">
           <ul id="task-list"></ul>
-          <img
-            src="/img/kelly-sikkema--q69Jfp6MtM-unsplash.jpg"
-            alt="empty"
-            height="50px"
-            width="50px"
-          />
         </div>
       </div>
     </div>
+    <script src="scripts.js"></script>
   </body>
 </html>
